--- a/.gitignore
+++ b/.gitignore
@@ -244,7 +244,7 @@ paket-files/
 .idea/
 *.sln.iml
 
-DatingApp.API/DatingApp.db
-.vscode
-obj
-bin
+*.db
+DatingApp.API/.vscode
+DatingApp.API/obj
+DatingApp.API/bin
