Added cloudinary setup

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=DatingApp.db"
+  },
+  "CloudinarySettings" : {
+    "CloudName": "cidoscloud",
+    "ApiKey": "758782667859314",
+    "ApiSecret":"h5isui88ppRCVDZqjITi3eoX96c"
   }
 }
