Database swapped to mysql

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=DatingApp.db"
+    "Default": "Server=localhost; Database=datingApp; Uid=appuser; Pwd=password"
   },
   "CloudinarySettings" : {
     "CloudName": "cidoscloud",
